--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:theme="@style/Theme.Lab01"
         tools:targetApi="31">
         <activity
-            android:name=".ListView_SanPhamActivity"
-            android:exported="true" >
+            android:name=".HocSpinnerAutocompleteActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,9 +22,14 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".Details_SanPhamActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".ListView_SanPhamActivity"
+            android:exported="true"></activity>
+        <activity
             android:name=".ListView_ContactActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".Lab03_AlertDialog_Activity"
             android:exported="false" />
@@ -40,7 +45,11 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
