--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,20 @@
         android:theme="@style/Theme.Lab01"
         tools:targetApi="31">
         <activity
+            android:name=".GridView_ShoppingActivity"
+            android:exported="false" />
+        <activity
             android:name=".HocSpinnerAutocompleteActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".Details_SanPhamActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ListView_SanPhamActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ListView_ContactActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".Lab03_AlertDialog_Activity"
             android:exported="false" />
